Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -840,21 +840,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-1-11f5db2a5119>, line 3)",
+     "evalue": "unexpected EOF while parsing (<ipython-input-3-2a7d655d8c95>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-11f5db2a5119>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    / delta_x\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-2a7d655d8c95>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    / delta_x)\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
      ]
     }
    ],
    "source": [
     "def derivative_of(list_of_terms, x_value, delta_x):\n",
-    "    return (((four_x_plus_fifteen[0][0] * (x_value + delta_x) ** four_x_plus_fifteen[0][1]) + \\\n",
+    "    return ((four_x_plus_fifteen[0][0] * (x_value + delta_x) ** four_x_plus_fifteen[0][1]) + \\\n",
     "            four_x_plus_fifteen[1][0] * (x_value ** four_x_plus_fifteen[1][1])) - \\\n",
     "            ((four_x_plus_fifteen[0][0] * (x_value ** four_x_plus_fifteen[1][1])\n",
     "            / delta_x)"
