--- a/index.ipynb
+++ b/index.ipynb
@@ -840,15 +840,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-3-2a7d655d8c95>, line 3)",
+     "evalue": "unexpected EOF while parsing (<ipython-input-4-9da4a799209d>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-2a7d655d8c95>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    / delta_x)\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-9da4a799209d>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    / (delta_x)\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
      ]
     }
    ],
