--- a/index.ipynb
+++ b/index.ipynb
@@ -845,10 +845,10 @@
    "outputs": [],
    "source": [
     "def derivative_of(list_of_terms, x_value, delta_x):\n",
-    "    return ((four_x_plus_fifteen[0][0] * (x_value + delta_x) ** four_x_plus_fifteen[0][1]) + \\\n",
+    "    return {(four_x_plus_fifteen[0][0] * (x_value + delta_x) ** four_x_plus_fifteen[0][1]) + \\\n",
     "            four_x_plus_fifteen[1][0] * (x_value ** four_x_plus_fifteen[1][1])) - \\\n",
     "            ((four_x_plus_fifteen[0][0] * (x_value ** four_x_plus_fifteen[1][1])\n",
-    "            / delta_x))"
+    "            / delta_x)}"
    ]
   },
   {
