--- a/index.ipynb
+++ b/index.ipynb
@@ -840,21 +840,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-7-2147f2a2a84a>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-2147f2a2a84a>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return {(four_x_plus_fifteen[0][0] * (x_value + delta_x) ** four_x_plus_fifteen[0][1]) +             four_x_plus_fifteen[1][0] * (x_value ** four_x_plus_fifteen[1][1])) -             ((four_x_plus_fifteen[0][0] * (x_value ** four_x_plus_fifteen[1][1])\u001b[0m\n\u001b[0m                                                                                                                                                                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def derivative_of(list_of_terms, x_value, delta_x):\n",
-    "    return {(four_x_plus_fifteen[0][0] * (x_value + delta_x) ** four_x_plus_fifteen[0][1]) + \\\n",
+    "    return ((four_x_plus_fifteen[0][0] * (x_value + delta_x) ** four_x_plus_fifteen[0][1]) + \\\n",
     "            four_x_plus_fifteen[1][0] * (x_value ** four_x_plus_fifteen[1][1])) - \\\n",
     "            ((four_x_plus_fifteen[0][0] * (x_value ** four_x_plus_fifteen[1][1])\n",
     "            / delta_x))"
