--- a/index.ipynb
+++ b/index.ipynb
@@ -843,7 +843,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def derivative_of(list_of_terms, x_value, delta_x):\n",
+    "    return ((four_x_plus_fifteen[0][0] * (x_value + delta_x) ** four_x_plus_fifteen[0][1])\n"
+   ]
   },
   {
    "cell_type": "code",
