--- a/index.ipynb
+++ b/index.ipynb
@@ -845,7 +845,8 @@
    "outputs": [],
    "source": [
     "def derivative_of(list_of_terms, x_value, delta_x):\n",
-    "    return ((four_x_plus_fifteen[0][0] * (x_value + delta_x) ** four_x_plus_fifteen[0][1])\n"
+    "    return ((four_x_plus_fifteen[0][0] * (x_value + delta_x) ** four_x_plus_fifteen[0][1])\n",
+    "derivative_of()"
    ]
   },
   {
