--- a/index.ipynb
+++ b/index.ipynb
@@ -840,12 +840,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def derivative_of(list_of_terms, x_value, delta_x):\n",
-    "    return (four_x_plus_fifteen[1][0] * (x_value ** four_x_plus_fifteen[1][1])"
+    "    return (four_x_plus_fifteen[1][0] * (x_value ** four_x_plus_fifteen[1][1]))"
    ]
   },
   {
