Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -866,7 +866,7 @@
    "source": [
     "def derivative_of(list_of_terms, x_value, delta_x):\n",
     "    return ((four_x_plus_fifteen[0][0] * (x_value + delta_x) ** four_x_plus_fifteen[0][1]) - \\\n",
-    "            four_x_plus_fifteen[1][0] * (x_value ** four_x_plus_fifteen[1][1])) #- \\\n",
+    "            four_x_plus_fifteen[1][0] * (x_value ** four_x_plus_fifteen[1][1])) \\ #- \\\n",
     "            ((four_x_plus_fifteen[0][0] * (x_value ** four_x_plus_fifteen[1][1])\n",
     "            / delta_x))"
    ]
