Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -860,9 +860,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected character after line continuation character (<ipython-input-14-f48ae2de6f6b>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-14-f48ae2de6f6b>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return ((four_x_plus_fifteen[0][0] * (x_value + delta_x) ** four_x_plus_fifteen[0][1]) -             four_x_plus_fifteen[1][0] * (x_value ** four_x_plus_fifteen[1][1])) \\#- \\\u001b[0m\n\u001b[0m                                                                                                                                                                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected character after line continuation character\n"
+     ]
+    }
+   ],
    "source": [
     "def derivative_of(list_of_terms, x_value, delta_x):\n",
     "    return ((four_x_plus_fifteen[0][0] * (x_value + delta_x) ** four_x_plus_fifteen[0][1]) - \\\n",
