--- a/index.ipynb
+++ b/index.ipynb
@@ -860,15 +860,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "ename": "IndentationError",
-     "evalue": "unexpected indent (<ipython-input-15-8a1b20541af2>, line 3)",
+     "evalue": "unexpected indent (<ipython-input-16-b6d9a02d2fce>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-8a1b20541af2>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    delta_x()))\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-16-b6d9a02d2fce>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    ((delta_x))\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
      ]
     }
    ],
@@ -877,7 +877,7 @@
     "    return ((four_x_plus_fifteen[0][0] * (x_value + delta_x) ** four_x_plus_fifteen[0][1]) - \\\n",
     "            four_x_plus_fifteen[1][0] * (x_value ** four_x_plus_fifteen[1][1])) \\\n",
     "           # ((four_x_plus_fifteen[0][0] * (x_value ** four_x_plus_fifteen[1][1])\n",
-    "            / delta_x)"
+    "            / (delta_x)"
    ]
   },
   {
