--- a/index.ipynb
+++ b/index.ipynb
@@ -860,15 +860,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (<ipython-input-17-8fbd2d6fd6fa>, line 3)",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-19-007fb24bf012>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-17-8fbd2d6fd6fa>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    delta_x()\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-19-007fb24bf012>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return ((four_x_plus_fifteen[0][0] * (x_value + delta_x) ** four_x_plus_fifteen[0][1]) -             four_x_plus_fifteen[1][0] * (x_value ** four_x_plus_fifteen[1][1]))             / delta_x))\u001b[0m\n\u001b[0m                                                                                                                                                                                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -876,7 +876,7 @@
     "def derivative_of(list_of_terms, x_value, delta_x):\n",
     "    return ((four_x_plus_fifteen[0][0] * (x_value + delta_x) ** four_x_plus_fifteen[0][1]) - \\\n",
     "            four_x_plus_fifteen[1][0] * (x_value ** four_x_plus_fifteen[1][1])) \\\n",
-    "            / delta_x)"
+    "            / delta_"
    ]
   },
   {
